# vxdiff

./: .gitignore  Cargo.toml  similarity_estimation.ipynb
src/: algorithm.rs  basic_terminal.rs  config.rs  input.rs  lib.rs  main.rs  tui_terminal.rs  validate.rs
src/algorithm/: benchmark.rs  dp_substate_vec.rs  dynamic_programming.rs  fragment_selection.rs  indices.rs  line_samples.rs  mod.rs  partition.rs  postprocess.rs  preprocess.rs  scoring.rs  seed_selection.rs  suffix_array.rs  test.rs
src/algorithm/main_sequence/: greedy_seeds.rs  mod.rs  multi_level.rs  naive_dp.rs
src/algorithm/moved_detection/: index_converter.rs  mod.rs  moved_cores.rs
src/algorithm/scoring/: affine_scoring.rs  line_bounds_scoring.rs  line_skipping.rs  mod.rs  multiline_gaps_scoring.rs  zero_one_scoring.rs
src/algorithm/scoring/simple/: k_gram_sampling.rs  mod.rs  whitespace_aware.rs  whitespace_ignoring.rs  zero_one.rs  zero_one_scoring.rs  zero_or_information.rs
src/tui_terminal/: builder.rs  clipboard.rs  direct.rs  doc.rs  gui_layout.rs  line_layout.rs  mod.rs  range_map.rs  syntax.rs  text_input.rs
testcases/: extract.py
