[package]
name = "vxdiff"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
atty = "*"
base64 = "*"
clap = { version = "*", features = ["derive"] }
console = "*"
crossterm = "*"
dirs = "*"
float-ord = "*"
memchr = "*"
rand = "*"
regex = "*"
serde = { version = "*", features = ["derive"] }
shell-words = "*"
string-interner = "*"
toml = "*"
tui = { version = "*", features = ["serde"] }
unicode-segmentation = "*"
unicode-width = "*"
