[package]
name = "vxdiff"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.69", features = ["backtrace"] }
atty = "*"
base64 = "*"
clap = { version = "*", features = ["derive"] }
crossterm = "0.25.0"  # Must be the same version as tui depends on.
dirs = "*"
float-ord = "*"
index_vec = "0.1.3"
memchr = "*"
rand = "*"
rand_chacha = "0.3.1"
regex = "*"
serde = { version = "*", features = ["derive"] }
shell-words = "*"
string-interner = "*"
syntect = "*"
toml = "*"
tui = { version = "*", features = ["serde"] }
unicode-segmentation = "*"
unicode-width = "*"
